F1 v3.45 - FIX - Set defaultValue on dynamic inputs, increase horz radio gap
Made-with: Cursor

--- a/css/radiogroup.css
+++ b/css/radiogroup.css
@@ -71,7 +71,7 @@
 }
 
 .radiogroup--list.radiogroup--horz .radiogroup__item {
-  margin-right: 0.25em;
+  margin-right: 1em;
 }
 
 
